infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: device-claimer.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: claimer-auth-srv
                port:
                  number: 3012
          - path: /api/devices/?(.*)
            pathType: Prefix
            backend:
              service:
                name: claimer-devices-srv
                port:
                  number: 3012
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: claimer-client-srv
                port:
                  number: 3000
